; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/beri/extr_beri_pic.c_beri_pic_enable_intr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/beri/extr_beri_pic.c_beri_pic_enable_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intr_irqsrc = type { i32 }
%struct.beri_pic_isrc = type { i32, i32 }
%struct.beripic_softc = type { i32* }

@BP_CFG_ENABLE = common dso_local global i32 0, align 4
@BP_CFG_IRQ_S = common dso_local global i32 0, align 4
@BP_CFG = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.intr_irqsrc*)* @beri_pic_enable_intr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @beri_pic_enable_intr(i32 %0, %struct.intr_irqsrc* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.intr_irqsrc*, align 8
  %5 = alloca %struct.beri_pic_isrc*, align 8
  %6 = alloca %struct.beripic_softc*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.intr_irqsrc* %1, %struct.intr_irqsrc** %4, align 8
  %8 = load i32, i32* %3, align 4
  %9 = call %struct.beripic_softc* @device_get_softc(i32 %8)
  store %struct.beripic_softc* %9, %struct.beripic_softc** %6, align 8
  %10 = load %struct.intr_irqsrc*, %struct.intr_irqsrc** %4, align 8
  %11 = bitcast %struct.intr_irqsrc* %10 to %struct.beri_pic_isrc*
  store %struct.beri_pic_isrc* %11, %struct.beri_pic_isrc** %5, align 8
  %12 = load i32, i32* @BP_CFG_ENABLE, align 4
  store i32 %12, i32* %7, align 4
  %13 = load %struct.beri_pic_isrc*, %struct.beri_pic_isrc** %5, align 8
  %14 = getelementptr inbounds %struct.beri_pic_isrc, %struct.beri_pic_isrc* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @BP_CFG_IRQ_S, align 4
  %17 = shl i32 %15, %16
  %18 = load i32, i32* %7, align 4
  %19 = or i32 %18, %17
  store i32 %19, i32* %7, align 4
  %20 = load %struct.beripic_softc*, %struct.beripic_softc** %6, align 8
  %21 = getelementptr inbounds %struct.beripic_softc, %struct.beripic_softc* %20, i32 0, i32 0
  %22 = load i32*, i32** %21, align 8
  %23 = load i64, i64* @BP_CFG, align 8
  %24 = getelementptr inbounds i32, i32* %22, i64 %23
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.beri_pic_isrc*, %struct.beri_pic_isrc** %5, align 8
  %27 = getelementptr inbounds %struct.beri_pic_isrc, %struct.beri_pic_isrc* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = mul nsw i32 %28, 8
  %30 = load i32, i32* %7, align 4
  %31 = call i32 @bus_write_8(i32 %25, i32 %29, i32 %30)
  ret void
}

declare dso_local %struct.beripic_softc* @device_get_softc(i32) #1

declare dso_local i32 @bus_write_8(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
